2008-05-05  Sam Steingold  <sds@gnu.org>

	* clos-genfun3.lisp (analyze-defgeneric): do not pass through
	gettext messages which contain no text, just format directives
	* clos-method2.lisp (program-error-reporter)
	(analyze-method-description): ditto

2008-05-05  Sam Steingold  <sds@gnu.org>

	* format.lisp (format-not-both-error): replaces format-conditional-error
	(format-parse-cs, format-conditional, formatter-main-1): use it

2008-05-05  Sam Steingold  <sds@gnu.org>

	* clos-slotdef1.lisp, compiler.lisp, lambdalist.lisp, trace.lisp:
	* clos-method1.lisp, clos-methcomb2.lisp: more uniform i18n messages

2008-05-03  Sam Steingold  <sds@gnu.org>

	* foreign.d (check_fvar_alignment): add
	(FOREIGN-VARIABLE, %OFFSET, FOREIGN-ALLOCATE): use it

2008-05-03  Sam Steingold  <sds@gnu.org>

	* charstrg.d, compiler.lisp, debug.d, defmacro.lisp, error.d:
	* funarg.d, record.d, sequence.d: tweak i18n messages

2008-05-02  Sam Steingold  <sds@gnu.org>

	* defs2.lisp (dispatch-reader): fix message
	* io.d (read_macro): ditto
	* pathname.d (SYS::LIB-DIRECTORY): ditto

2008-05-01  Sam Steingold  <sds@gnu.org>

	* utils/fix-perms.sh: *.xsl & *.css are not executable

2008-05-01  Sam Steingold  <sds@gnu.org>

	* macros1.lisp (*suppress-similar-constant-redefinition-warning*):
	new user variable
	(defconstant): pass ,initial-var to constant-warning
	(constant-warning): accept 3rd variable and respect
	*suppress-similar-constant-redefinition-warning*
	* constobj.d (version): bump, because constant-warning is ABI

2008-04-30  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1928759 ]: (format nil "~8e" .999999d0) => " 10.0d-1"
	* format.lisp (format-float-for-e): when format-float-to-string
	rounds up above 1, adjust everything

2008-04-23  Sam Steingold  <sds@gnu.org>

	* fill-out.lisp (stream-start-s-expression@t): return
	*PRINT-RIGHT-MARGIN*, just like in format.lisp

2008-04-23  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (clisp_gettext): the common part of ...